--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        flake8 app.py
+
     - name: Run tests
       run: python -m unittest discover
 
