--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,10 @@ jobs:
       run: |
         pip install flake8
         flake8 app.py
-
+      
     - name: Run tests with coverage
       run: |
+        pip install coverage
         coverage run -m unittest discover
         coverage report
   
